--- a/external_bi/external_Dashboard_01.html
+++ b/external_bi/external_Dashboard_01.html
@@ -55,8 +55,8 @@
                     </div>
                     <h3 class="text-2xl font-semibold text-white mb-3">Dashboard Design Principles ช่วงที่ 1</h3><br><br><br>
                     <div class="flex items-center">
-                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/ERn_gC0yJFNPlHa7T6kugfoBogJOli7x3pbOIJqvkLBxVg?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJTdHJlYW1XZWJBcHAiLCJyZWZlcnJhbFZpZXciOiJTaGFyZURpYWxvZy1MaW5rIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXcifX0%3D&e=i6Xg3n"
-                            class="bg-emerald-500 text-white text-center px-4 rounded-none py-2 tracking-tighter 
+                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/ERn_gC0yJFNPlHa7T6kugfoBsXHvzgoPoqH9EuCOVxYM0A?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJTdHJlYW1XZWJBcHAiLCJyZWZlcnJhbFZpZXciOiJTaGFyZURpYWxvZy1MaW5rIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXcifX0%3D&e=1IZkVH"
+                            target="_blank" class="bg-emerald-500 text-white text-center px-4 rounded-none py-2 tracking-tighter 
                             shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
                         <p class="text-gray-400 text-sm">คลิกเพื่อเปิดวิดีโอ</p>
                     </div>
@@ -72,8 +72,8 @@
                     </div>
                     <h3 class="text-2xl font-semibold text-white mb-3">Dashboard Design Principles ช่วงที่ 2</h3><br><br><br>
                     <div class="flex items-center">
-                        <span><a href="#"
-                            class="bg-emerald-500 text-white text-center px-4 rounded-none py-2 tracking-tighter 
+                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/EZxplrQ43uBFoI3cCK5qGrQBGiwlyqVu0dsSAd9pigIeCQ?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJTdHJlYW1XZWJBcHAiLCJyZWZlcnJhbFZpZXciOiJTaGFyZURpYWxvZy1MaW5rIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXcifX0%3D&e=UwtYYS"
+                            target="_blank" class="bg-emerald-500 text-white text-center px-4 rounded-none py-2 tracking-tighter 
                             shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
                         <p class="text-gray-400 text-sm">คลิกเพื่อเปิดวิดีโอ</p>
                     </div>
@@ -89,8 +89,8 @@
                     </div>
                     <h3 class="text-2xl font-semibold text-white mb-3">Dashboard Design Principles ช่วงที่ 3</h3><br><br><br>
                     <div class="flex items-center">
-                        <span><a href="#"
-                            class="bg-emerald-500 text-white text-center px-4 rounded-none py-2 tracking-tighter 
+                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/EVARhAUcj_ZNvJjztTIcz7MBgE9wpFe3UGi3mUlKXNpPeQ?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJTdHJlYW1XZWJBcHAiLCJyZWZlcnJhbFZpZXciOiJTaGFyZURpYWxvZy1MaW5rIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXcifX0%3D&e=eNJV1l"
+                            target="_blank" class="bg-emerald-500 text-white text-center px-4 rounded-none py-2 tracking-tighter 
                             shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
                         <p class="text-gray-400 text-sm">คลิกเพื่อเปิดวิดีโอ</p>
                     </div>
@@ -98,39 +98,6 @@
             </div>
         </div>
         </main>
-
-            <!-- คำสั่ง Overlay Frame ที่ผูกกับปุ่ม "ลงทะเบียน" กับ "ทำแบบทดสอบ" -->
-        <!-- Overlay Frame Register -->
-        <div id="drawer-overlay-regis" class="fixed inset-0 bg-black opacity-0 pointer-events-none transition-opacity duration-300 z-40"></div>
-            <div id="drawer-regis" class="fixed top-0 right-0 h-full w-3/4 bg-white shadow-xl transform translate-x-full transition-transform duration-300 z-50">
-                <div class="p-4">
-                    <div class="flex justify-between items-center mb-4">
-                         <h2 class="text-xl font-bold FontThai">ลงทะเบียน</h2>
-                        <button id="close-drawer-btn-regis" class="text-gray-500 hover:text-gray-700">
-                            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
-                            </svg>
-                        </button>
-                    </div>
-                    <div style="position: relative; padding-bottom: 60.25%; height: 0; overflow: hidden;"><iframe src="https://forms.office.com/r/1txBSsaXQJ" width="1300" height="0" frameborder="0" scrolling="no" allowfullscreen title="IT Security & IT Policie E-Learning.mp4" style="border:none; position: absolute; top: 0; left: 0; right: 0; bottom: 0; height: 100%; max-width: 100%;"></iframe></div>
-                </div>
-            </div>
-
-        <!-- Overlay Frame test -->
-        <div id="drawer-overlay-Test" class="fixed inset-0 bg-black opacity-0 pointer-events-none transition-opacity duration-300 z-40"></div>
-            <div id="drawer-test" class="fixed top-0 right-0 h-full w-3/4 bg-white shadow-xl transform translate-x-full transition-transform duration-300 z-50">
-                <div class="p-4">
-                    <div class="flex justify-between items-center mb-4">
-                        <h2 class="text-xl font-bold FontThai">ทำแบบทดสอบ</h2>
-                        <button id="close-drawer-btn-test" class="text-gray-500 hover:text-gray-700">
-                            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
-                            </svg>
-                        </button>
-                    </div>
-                    <div style="position: relative; padding-bottom: 60.25%; height: 0; overflow: hidden;"><iframe src="https://forms.office.com/r/p48HeJd3yv" width="1300" height="0" frameborder="0" scrolling="no" allowfullscreen title="IT Security & IT Policie E-Learning.mp4" style="border:none; position: absolute; top: 0; left: 0; right: 0; bottom: 0; height: 100%; max-width: 100%;"></iframe></div>
-                </div>
-            </div>
     </div>
 
 </body>
