--- a/external_bi/external_Dashboard_02.html
+++ b/external_bi/external_Dashboard_02.html
@@ -381,6 +381,126 @@
                     </div>
                 </div>
             </div>
+            <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
+                <img src="../Photo/PBI_eassentails.png" alt="register" class="w-full h-56 object-cover">
+                <div class="p-6">
+                    <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
+                        <span class="mr-2">ช่วงที่ 23</span>
+                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">11:29 นาที</span>
+                    </div>
+                    <h3 class="text-l font-semibold text-white mb-2">Power BI Essentials ช่วงที่ 23</h3><br>
+                    <div class="flex items-center">
+                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/IQARdKYpvPD5SKFt-SsYTBNgAWHSZbHFbFL-9-yE4UqcFzc"
+                            target="_blank" class="bg-emerald-500 text-white text-center px-2 rounded-none py-2 tracking-tighter 
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
+                <img src="../Photo/PBI_eassentails.png" alt="register" class="w-full h-56 object-cover">
+                <div class="p-6">
+                    <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
+                        <span class="mr-2">ช่วงที่ 24</span>
+                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">09:52 นาที</span>
+                    </div>
+                    <h3 class="text-l font-semibold text-white mb-2">Power BI Essentials ช่วงที่ 24</h3><br>
+                    <div class="flex items-center">
+                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/IQBjwXjtWZ1mT495BV0vCjYaAZFqlGJJ1JcA50UZI89czFc?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=pMKkx4"
+                            target="_blank" class="bg-emerald-500 text-white text-center px-2 rounded-none py-2 tracking-tighter 
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
+                <img src="../Photo/PBI_eassentails.png" alt="register" class="w-full h-56 object-cover">
+                <div class="p-6">
+                    <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
+                        <span class="mr-2">ช่วงที่ 25</span>
+                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">08:13 นาที</span>
+                    </div>
+                    <h3 class="text-l font-semibold text-white mb-2">Power BI Essentials ช่วงที่ 25</h3><br>
+                    <div class="flex items-center">
+                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/IQBJy1eWO4mXToNxC3OP98dSAabLu0lkzT4oHNJSdSohK8k?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=I03NL7"
+                            target="_blank" class="bg-emerald-500 text-white text-center px-2 rounded-none py-2 tracking-tighter 
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
+                <img src="../Photo/PBI_eassentails.png" alt="register" class="w-full h-56 object-cover">
+                <div class="p-6">
+                    <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
+                        <span class="mr-2">ช่วงที่ 26</span>
+                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">06:23 นาที</span>
+                    </div>
+                    <h3 class="text-l font-semibold text-white mb-2">Power BI Essentials ช่วงที่ 26</h3><br>
+                    <div class="flex items-center">
+                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/IQDZHHOQc8ueT5qpVUy2EWT2AWvHUOkFdnBXOlysJjExXpk?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=A3znH5"
+                            target="_blank" class="bg-emerald-500 text-white text-center px-2 rounded-none py-2 tracking-tighter 
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
+                <img src="../Photo/PBI_eassentails.png" alt="register" class="w-full h-56 object-cover">
+                <div class="p-6">
+                    <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
+                        <span class="mr-2">ช่วงที่ 27</span>
+                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">06:41 นาที</span>
+                    </div>
+                    <h3 class="text-l font-semibold text-white mb-2">Power BI Essentials ช่วงที่ 27</h3><br>
+                    <div class="flex items-center">
+                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/IQDm-9UbhXw5Sopaz_-dv5zkAR8rr7Rw0tiIdPPtjVW2svE?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=gPdXOv"
+                            target="_blank" class="bg-emerald-500 text-white text-center px-2 rounded-none py-2 tracking-tighter 
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
+                <img src="../Photo/PBI_eassentails.png" alt="register" class="w-full h-56 object-cover">
+                <div class="p-6">
+                    <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
+                        <span class="mr-2">ช่วงที่ 28</span>
+                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">14:06 นาที</span>
+                    </div>
+                    <h3 class="text-l font-semibold text-white mb-2">Power BI Essentials ช่วงที่ 28</h3><br>
+                    <div class="flex items-center">
+                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/IQBw67sJ5jqJSJP_-C5JyOjvAfGPUBbznMiQahxTY9RXVlY"
+                            target="_blank" class="bg-emerald-500 text-white text-center px-2 rounded-none py-2 tracking-tighter 
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
+                <img src="../Photo/PBI_eassentails.png" alt="register" class="w-full h-56 object-cover">
+                <div class="p-6">
+                    <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
+                        <span class="mr-2">ช่วงที่ 29</span>
+                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">08:59 นาที</span>
+                    </div>
+                    <h3 class="text-l font-semibold text-white mb-2">Power BI Essentials ช่วงที่ 29</h3><br>
+                    <div class="flex items-center">
+                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/IQBFB3E-O2tIR6vHq0b664G2AZ5-_dwpT9M-8EK9KITcouM?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=7Ac01O"
+                            target="_blank" class="bg-emerald-500 text-white text-center px-2 rounded-none py-2 tracking-tighter 
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
+                <img src="../Photo/PBI_eassentails.png" alt="register" class="w-full h-56 object-cover">
+                <div class="p-6">
+                    <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
+                        <span class="mr-2">ช่วงที่ 30</span>
+                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">02:58 นาที</span>
+                    </div>
+                    <h3 class="text-l font-semibold text-white mb-2">Power BI Essentials ช่วงที่ 30</h3><br>
+                    <div class="flex items-center">
+                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/IQDkauFihkJFQbI16Wc4UCqRATQ-Gds2YvXYT7V7WVU1mmE?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=H5BA2d"
+                            target="_blank" class="bg-emerald-500 text-white text-center px-2 rounded-none py-2 tracking-tighter 
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
+                    </div>
+                </div>
+            </div>
 
             <!-- บรรทัดสุดท้าย -->
         </div> 
