--- a/external_Dashboard_BI.html
+++ b/external_Dashboard_BI.html
@@ -45,7 +45,7 @@
                         2. Power BI Essentials
                     </a>
                     
-                    <a href="#" class="block rounded-none border-b-2 px-3 py-3 text-sm text-white hover:bg-indigo-600 transition duration-150 ease-in-out transition hover:scale-105">
+                    <a href="external_bi/external_Dashboard_03.html" class="block rounded-none border-b-2 px-3 py-3 text-sm text-white hover:bg-indigo-600 transition duration-150 ease-in-out transition hover:scale-105">
                         3. Hands-On Power BI
                     </a>
                 </nav>
