--- a/external_bi/external_Dashboard_03.html
+++ b/external_bi/external_Dashboard_03.html
@@ -33,6 +33,8 @@
             <div class="p-4 **flex-shrink-0** grid grid-cols-1 gap-4">
                 <a href="https://eaglesthai-my.sharepoint.com/:b:/p/chanin_k/IQD9b8jJivRcTpMqhWQGxjV9ATM-m6gJwICL-aVoAsAviUk?e=rJkWm2" target="_blank" 
                  class="block w-full **text-center** bg-green-700 hover:bg-gradient-to-r from-green-700 to-green-900 text-white FontThai text-sm transition ease-in-out hover:scale-110 duration-150 rounded-none py-4 px-4">สื่อประกอบการเรียน</a>
+                <a href="https://eaglesthai-my.sharepoint.com/:f:/p/chanin_k/IgBejd4ZzpXBRIwEGqzKs2nbAbL6IAXMYqODUNJBnjUNkxA?e=gqIXuR" target="_blank" 
+                 class="block w-full **text-center** bg-green-700 hover:bg-gradient-to-r from-green-700 to-green-900 text-white FontThai text-sm transition ease-in-out hover:scale-110 duration-150 rounded-none py-4 px-4">Data ใช้ระหว่างเรียน</a>
             </div>
             
         </aside>
@@ -118,6 +120,96 @@
                     <h3 class="text-l font-semibold text-white mb-2">Hands-on Power BI ช่วงที่ 5</h3><br>
                     <div class="flex items-center">
                         <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/IQAJmqyzJih2So3j8ZyY4euuAaEgHgNfdFv0p1oiHheufyg?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=HyEqrr"
+                            target="_blank" class="bg-emerald-500 text-white text-center px-2 rounded-none py-2 tracking-tighter 
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
+                <img src="../Photo/power_bi_wall_3.png" alt="register" class="w-full h-56 object-cover">
+                <div class="p-6">
+                    <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
+                        <span class="mr-2">ช่วงที่ 6</span>
+                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">03:06 นาที</span>
+                    </div>
+                    <h3 class="text-l font-semibold text-white mb-2">Hands-on Power BI ช่วงที่ 6</h3><br>
+                    <div class="flex items-center">
+                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/IQBMNaeJHOsqT7Pa5DxSkFVnAWXEbHrHSAdxdD4uZPMAa2E?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=9dGNoy"
+                            target="_blank" class="bg-emerald-500 text-white text-center px-2 rounded-none py-2 tracking-tighter 
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
+                <img src="../Photo/power_bi_wall_3.png" alt="register" class="w-full h-56 object-cover">
+                <div class="p-6">
+                    <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
+                        <span class="mr-2">ช่วงที่ 7</span>
+                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">09:18 นาที</span>
+                    </div>
+                    <h3 class="text-l font-semibold text-white mb-2">Hands-on Power BI ช่วงที่ 7</h3><br>
+                    <div class="flex items-center">
+                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/IQAyK35R9lXRT433Wp9DZxuoAW4cAwS4Qd3Qdhq87Ml66RI?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=SihQY3"
+                            target="_blank" class="bg-emerald-500 text-white text-center px-2 rounded-none py-2 tracking-tighter 
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
+                <img src="../Photo/power_bi_wall_3.png" alt="register" class="w-full h-56 object-cover">
+                <div class="p-6">
+                    <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
+                        <span class="mr-2">ช่วงที่ 8</span>
+                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">21:23 นาที</span>
+                    </div>
+                    <h3 class="text-l font-semibold text-white mb-2">Hands-on Power BI ช่วงที่ 8</h3><br>
+                    <div class="flex items-center">
+                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/IQCie4xjeTsGQaOVc7Voust2AdtZfffI-LEcrD99cQu0sq4?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=hYES9p"
+                            target="_blank" class="bg-emerald-500 text-white text-center px-2 rounded-none py-2 tracking-tighter 
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
+                <img src="../Photo/power_bi_wall_3.png" alt="register" class="w-full h-56 object-cover">
+                <div class="p-6">
+                    <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
+                        <span class="mr-2">ช่วงที่ 9</span>
+                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">06:30 นาที</span>
+                    </div>
+                    <h3 class="text-l font-semibold text-white mb-2">Hands-on Power BI ช่วงที่ 9</h3><br>
+                    <div class="flex items-center">
+                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/IQBuC4VAVe6bSrQJFLt4vTMQAY1NnXrp8U3MMCsjNnxaB1U?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=DjtPWv"
+                            target="_blank" class="bg-emerald-500 text-white text-center px-2 rounded-none py-2 tracking-tighter 
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
+                <img src="../Photo/power_bi_wall_3.png" alt="register" class="w-full h-56 object-cover">
+                <div class="p-6">
+                    <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
+                        <span class="mr-2">ช่วงที่ 10</span>
+                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">05:19 นาที</span>
+                    </div>
+                    <h3 class="text-l font-semibold text-white mb-2">Hands-on Power BI ช่วงที่ 10</h3><br>
+                    <div class="flex items-center">
+                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/IQDt9sMmEbfvQ4pocGMl_MXFAeKnEPywjqMPmzseHF_r50o?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=AHgeke"
+                            target="_blank" class="bg-emerald-500 text-white text-center px-2 rounded-none py-2 tracking-tighter 
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
+                <img src="../Photo/power_bi_wall_3.png" alt="register" class="w-full h-56 object-cover">
+                <div class="p-6">
+                    <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
+                        <span class="mr-2">ช่วงที่ 11</span>
+                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">10:54 นาที</span>
+                    </div>
+                    <h3 class="text-l font-semibold text-white mb-2">Hands-on Power BI ช่วงที่ 11</h3><br>
+                    <div class="flex items-center">
+                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/IQBg3do0eoB4SbSTR1DSK6lxATGpCuLfgHWZYb_E6exOEbw?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=yGoivm"
                             target="_blank" class="bg-emerald-500 text-white text-center px-2 rounded-none py-2 tracking-tighter 
                             shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
                     </div>
