--- a/index.html
+++ b/index.html
@@ -16,27 +16,38 @@
         }
     </style>
 </head>
-<body>
-<div class="bg-gradient-to-b from-blue-500 to-orange-400">
-  <header class="absolute inset-x-0 top-0 z-50">
-  </header>
-  <div class="relative isolate px-6 pt-14">
-    <div aria-hidden="true" class="absolute inset-x-0 -top-30 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-30">
-      <div style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)" class="relative left-[calc(50%-11rem)] aspect-1155/678 w-144.5 -translate-x-1/2 rotate-30 bg-linear-to-tr from-[#99450c] to-[#3e12a6] opacity-30 sm:left-[calc(50%-30rem)] sm:w-288.75"></div>
-    </div>
-    <div class="mx-auto max-w-2xl h-screen py-32 sm:py-48 lg:py-56">
-      <div class="hidden sm:mb-8 sm:flex sm:justify-center">
+<body class="bg-gradient-to-b from-amber-50 to-zinc-50 FontThai">
+<!-- Hero -->
+<div class="flex items-center justify-center h-screen bg-gradient-to-b from-amber-100 to-indigo-100 mx-auto px-12 sm:px-6 lg:px-8">
+  <!-- Grid -->
+  <div class="grid md:grid-cols-2 gap-4 md:gap-8 xl:gap-20 md:items-center">
+    <div>
+      <h1 class="block text-3xl text-neutral-700 sm:text-3xl lg:text-3xl">EAGLES AIR & SEA (Thailand) CO.,LTD <br></h1><h2><span class="font-semibold text-orange-400">E-Learning</span></h2>
+      <p class="mt-3 text-sm text-slate-500">ระบบการเข้าอบรมของพนักงาน </p>
+
+      <!-- Buttons -->
+      <div class="mt-7 grid gap-3 w-full sm:inline-flex">
+        <a class="py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-hidden focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" href="manu_page.html">
+          เข้าสู่ระบบ
+          <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg>
+        </a>
+        <a class="py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-2xs hover:bg-gray-50 focus:outline-hidden focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-white dark:hover:bg-neutral-800 dark:focus:bg-neutral-800" href="readmore.html">
+          ข้อมูลเพิ่มเติม
+        </a>
       </div>
-      <div class="text-center">
-        <h1 class="FontThai tracking-tighter text-5xl text-transparent bg-clip-text bg-gradient-to-r to-blue-300 from-amber-100">EAGLES Knowledge zone.</h1>
-        <div class="mt-10 flex items-center justify-center gap-x-6">
-          <a href="manu_page.html" class="rounded-none bg-indigo-500 px-6 py-2.5 text-sm font-semibold text-white shadow-xs hover:bg-indigo-400 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500 transition hover:scale-105 FontThai">เข้าสู่ระบบ</a>
-          <a href="readmore.html" class="text-sm/6 text-white transition hover:scale-105 FontThai">ข้อมูลเพิ่มเติม<span aria-hidden="true">→</span></a>
-        </div>
-      </div>
-      <div class="absolute bottom-0 right-0 text-white bg-black">Eagles air & sea (thailand) co. ltd</div>
+      <!-- End Buttons -->
+      <!-- Review -->
+      <!-- End Review -->
     </div>
+    <!-- End Col -->
+
+    <div class="relative ms-4">
+      <img class="w-full max-h-350 rounded-md" src="Photo/Homepage_wall.png" alt="HPwall">
+    </div>
+    <!-- End Col -->
   </div>
+  <!-- End Grid -->
 </div>
+<!-- End Hero -->
 </body>
 </html>
