--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     </div>
     <!-- End Col -->
 
-    <div class="relative ms-4">
-      <img class="w-full max-h-350 rounded-md" src="Photo/Homepage_wall.png" alt="HPwall">
+    <div class="relative ms-2">
+      <img class="w-140 max-h-350 rounded-none" src="Photo/Homepage_wall.png" alt="HPwall">
     </div>
     <!-- End Col -->
   </div>
