--- a/manu_page.html
+++ b/manu_page.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,27 +24,27 @@
       <dl class="grid max-w-xl grid-cols-1 gap-x-8 gap-y-10 lg:max-w-none lg:grid-cols-2 lg:gap-y-16">
         
         
-        <div class="relative pl-16 rounded-none border-b-2 px-3 py-2 tracking-normal hover:bg-cyan-100 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-cyan-700 transition hover:scale-105 ">
+        <div class="relative pl-16 rounded-none border-b-2 px-3 py-2 tracking-normal hover:bg-blue-200 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-cyan-700 transition hover:scale-115 ">
           <dt class="text-base/7 font-semibold text-gray-900">
-            <div class="absolute top-0 left-0 flex size-10 items-center justify-center rounded-full bg-gradient-to-b from-blue-500 to-amber-500">
+            <div class="absolute top-0 left-0 flex size-10 items-center justify-center rounded-full bg-gradient-to-b from-green-500 to-green-300">
             </div>
             Eagles E-Learning
           </dt>
           <a href="manu_e.html" class="mt-2 text-base/7 text-gray-600 hover:text-amber-500 ">เลือกเพื่อเข้าสู่ระบบ</a>
         </div>
 
-        <div class="relative pl-16 rounded-none border-b-2 px-3 py-2 tracking-normal hover:bg-cyan-100 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-cyan-700 transition hover:scale-105 ">
+        <div class="relative pl-16 rounded-none border-b-2 px-3 py-2 tracking-normal hover:bg-blue-200 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-cyan-700 transition hover:scale-115 ">
           <dt class="text-base/7 font-semibold text-gray-900">
-            <div class="absolute top-0 left-0 flex size-10 items-center justify-center rounded-full bg-gradient-to-b from-rose-300 to-amber-zinc-100">
+            <div class="absolute top-0 left-0 flex size-10 items-center justify-center rounded-full bg-gradient-to-b from-green-500 to-green-300">
             </div>
             วิดีโอการอบรมภายนอกของพนักงาน Eagles
           </dt>
           <a href="manu_external.html" class="mt-2 text-base/7 text-gray-600 hover:text-amber-500 ">เลือกเพื่อเข้าสู่ระบบ</a>
         </div>
 
-        <div class="relative pl-16 rounded-none border-b-2 px-3 py-2 tracking-normal hover:bg-cyan-100 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-cyan-700 transition hover:scale-105 ">
+        <div class="relative pl-16 rounded-none border-b-2 px-3 py-2 tracking-normal hover:bg-blue-200 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-cyan-700 transition hover:scale-115 ">
           <dt class="text-base/7 font-semibold text-gray-900">
-            <div class="absolute top-0 left-0 flex size-10 items-center justify-center rounded-full bg-gradient-to-b from-slate-500 to-zinc-100">
+            <div class="absolute top-0 left-0 flex size-10 items-center justify-center rounded-full bg-gradient-to-b from-green-500 to-green-300">
             </div>
             การแก้ปัญหาด้วยตัวเอง
           </dt>
