IT_Policie.html

--- a/IT_Policie.html
+++ b/IT_Policie.html
@@ -22,7 +22,7 @@
         <aside class="flex-none flex flex-col h-screen w-64 bg-gradient-to-b from-blue-500 to-orange-500 text-white shadow-2xl">
             
             <div class="px-16 flex items-center justify-center h-16 flex-shrink-0">
-                <img src="/Photo/E-LOGO.png" alt="E-LOGO">
+                <img src="Photo/E-LOGO.png" alt="E-LOGO">
             </div>
 
             <div class="pt-4 flex-grow overflow-y-auto">
@@ -204,4 +204,5 @@
 </script>
 
 </body>
+
 </html>
