--- a/Basic_AI.html
+++ b/Basic_AI.html
@@ -83,8 +83,8 @@
                             </p>
                             <div class="flex items-center">
                                 <a href="Basic_Ai_vid.html"
-                                    class="bg-emerald-500 text-white px-2 rounded-none px-4 py-2
-                                    shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-3">E-Learning</a>
+                                    class="bg-emerald-500 text-white px-2 rounded-none px-6 py-2
+                                    shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-3">รับชม</a>
                                 <div>
                                     <p class="text-gray-400 text-sm">คลิกเพื่อเปิด E-Learning</p>
                                 </div>
@@ -122,7 +122,7 @@
                 <div class="p-4 h-full flex flex-col">
                     <div class="flex justify-between items-center mb-4 flex-shrink-0">
                        <h2 class="text-xl font-bold FontThai">ลงทะเบียน</h2>
-                        <button id="close-drawer-btn-regis" class="text-gray-500 hover:text-gray-700">
+                        <button type="reset" id="close-drawer-btn-regis" class="text-gray-500 hover:text-gray-700">
                             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
                             </svg>
@@ -139,7 +139,7 @@
                 <div class="p-4 h-full flex flex-col">
                     <div class="flex justify-between items-center mb-4 flex-shrink-0">
                         <h2 class="text-xl font-bold FontThai">ทำแบบทดสอบ</h2>
-                        <button id="close-drawer-btn-test" class="text-gray-500 hover:text-gray-700">
+                        <button type="button" id="close-drawer-btn-test" class="text-gray-500 hover:text-gray-700">
                             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
                             </svg>
