--- a/manu_page.html
+++ b/manu_page.html
@@ -22,7 +22,7 @@
 <div class="flex items-center justify-center gap-10 h-screen py-25 sm:py-32">
 
     
-<a href="manu_e.html">
+<a href="category.html">
   <div class="flex flex-col items-center p-8 md:flex-row md:gap-8 border-b-2 border-white shadow-xs rounded-none transition hover:bg-indigo-400 hover:text-cyan-50 hover:rounded-sm hover:border-orange-200 hover:scale-125">
     <div class="grid items-center md:items-start">
       <span class="text-xl text-white">Eagles E-Learning</span>    
