--- a/category.html
+++ b/category.html
@@ -31,7 +31,7 @@
             </div>
             
             <div class="p-4 **flex-shrink-0** grid grid-cols-1 gap-4">
-                <a href="category/category_IT.html" class="rounded-none border-b-2 px-3 py-2 text-sm text-white text-balance tracking-normal shadow-xs hover:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-700 transition hover:scale-105 FontThai">หลักสูตรการอบรมของแผนก Information Technology</a>
+                <a href="/category/category_IT.html" class="rounded-none border-b-2 px-3 py-2 text-sm text-white text-balance tracking-normal shadow-xs hover:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-700 transition hover:scale-105 FontThai">หลักสูตรการอบรมของแผนก Information Technology</a>
                 <a href="#" class="rounded-none border-b-2 px-3 py-2 text-sm text-white text-balance tracking-normal shadow-xs hover:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-700 transition hover:scale-105 FontThai">หลักสูตรการอบรมของแผนก Human Resource</a>
                 <a href="#" class="rounded-none border-b-2 px-3 py-2 text-sm text-white text-balance tracking-normal shadow-xs hover:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-700 transition hover:scale-105 FontThai">หลักสูตรการอบรมของแผนก Quality</a>
                 <a href="#" class="rounded-none border-b-2 px-3 py-2 text-sm text-white text-balance tracking-normal shadow-xs hover:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-700 transition hover:scale-105 FontThai">หลักสูตรการอบรมของแผนก Accounting & Finance</a>
@@ -56,4 +56,3 @@
 </body>
 
 </html>
-
