--- a/category.html
+++ b/category.html
@@ -23,7 +23,7 @@
         <aside class="flex-none **flex flex-col h-full** w-64 bg-gradient-to-b from-blue-500 to-orange-500 text-white shadow-2xl">
             
             <div class="px-16 flex items-center justify-center h-16 **flex-shrink-0**">
-                <img src="../Photo/E-LOGO.png" alt="E-LOGO">
+                <img src="Photo/E-LOGO.png" alt="E-LOGO">
             </div>
 
             <div class="pt-4 **flex-grow overflow-y-auto**">
@@ -56,3 +56,4 @@
 </body>
 
 </html>
+
