--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Noto Sans Thai' rel='stylesheet'>
@@ -15,39 +15,33 @@
             font-family: 'Sarabun';
         }
     </style>
-</head>
-<body class="bg-gradient-to-b from-amber-50 to-zinc-50 FontThai">
-<!-- Hero -->
-<div class="flex items-center justify-center h-screen bg-gradient-to-b from-amber-100 to-indigo-100 mx-auto px-12 sm:px-6 lg:px-8">
-  <!-- Grid -->
-  <div class="grid md:grid-cols-2 gap-4 md:gap-8 xl:gap-20 md:items-center">
-    <div>
-      <h1 class="block text-3xl text-neutral-700 sm:text-3xl lg:text-3xl">EAGLES AIR & SEA (Thailand) CO.,LTD <br></h1><h2><span class="font-semibold text-orange-400">E-Learning</span></h2>
-      <p class="mt-3 text-sm text-slate-500">ระบบการเข้าอบรมของพนักงาน </p>
+  </head>
 
-      <!-- Buttons -->
-      <div class="mt-7 grid gap-3 w-full sm:inline-flex">
-        <a class="py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-hidden focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" href="manu_page.html">
-          เข้าสู่ระบบ
-          <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg>
-        </a>
-        <a class="py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-2xs hover:bg-gray-50 focus:outline-hidden focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-white dark:hover:bg-neutral-800 dark:focus:bg-neutral-800" href="readmore.html">
-          ข้อมูลเพิ่มเติม
-        </a>
-      </div>
-      <!-- End Buttons -->
-      <!-- Review -->
-      <!-- End Review -->
-    </div>
-    <!-- End Col -->
+<body class="bg-gradient-to-b from-amber-50 to-zinc-50 FontThai">
+  <div class="flex items-center justify-center h-screen bg-gradient-to-b from-amber-100 to-indigo-100 mx-auto px-12 sm:px-6 lg:px-8">
+      <div class="grid md:grid-cols-2 gap-4 md:gap-8 xl:gap-20 md:items-center">
+
+        <div>
+          <h1 class="block text-3xl text-neutral-700 sm:text-3xl lg:text-3xl">EAGLES AIR & SEA (Thailand) CO.,LTD <br></h1><h2><span class="font-semibold text-orange-400">E-Learning</span></h2>
+            <p class="mt-3 text-sm text-slate-500">ระบบการเข้าอบรมของพนักงาน </p>
+              <div class="mt-7 grid gap-3 w-full sm:inline-flex">
+
+                <a class="py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-hidden focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" href="main_manu.html">
+              เข้าสู่ระบบ
+                  <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg>
+                </a>
+
+                <a class="py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-2xs hover:bg-gray-50 focus:outline-hidden focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-white dark:hover:bg-neutral-800 dark:focus:bg-neutral-800" href="readmore.html">
+              ข้อมูลเพิ่มเติม
+                </a>
+
+              </div>
+        </div>
 
     <div class="relative ms-2">
       <img class="w-140 max-h-350 rounded-none" src="Photo/Homepage_wall.png" alt="HPwall">
     </div>
-    <!-- End Col -->
+    </div>
   </div>
-  <!-- End Grid -->
-</div>
-<!-- End Hero -->
 </body>
 </html>
