--- a/inhouse_IT_1training.html
+++ b/inhouse_IT_1training.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Noto Sans Thai' rel='stylesheet'>
     <title>EAGLES Knowledge zone</title>
-    <link rel="icon" type="image/x-icon" href="/Photo/Eicon.png">
+    <link rel="icon" type="image/x-icon" href="Photo/Eicon.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         .FontThai {
@@ -23,7 +23,7 @@
         <aside class="flex-none flex flex-col h-screen w-64 bg-gradient-to-b from-blue-500 to-orange-500 text-white shadow-2xl">
             
             <div class="px-16 flex items-center justify-center h-16 flex-shrink-0">
-                <img src="/Photo/E-LOGO.png" alt="E-LOGO">
+                <img src="Photo/E-LOGO.png" alt="E-LOGO">
             </div>
 
             <div class="pt-4 flex-grow overflow-y-auto">
@@ -50,7 +50,7 @@
 
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
             <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
-                <img src="/Photo/Photo_1.jpg" alt="register" class="w-full h-56 object-cover">
+                <img src="Photo/Photo_1.jpg" alt="register" class="w-full h-56 object-cover">
                 <div class="p-6">
                     <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
                         <span class="mr-2">ขั้นตอนที่ 1</span>
@@ -74,7 +74,7 @@
                 </div>
             </div>
         <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
-            <img src="/Photo/Photo_2.png" alt="Home office with laptop" class="w-full h-56 object-cover">
+            <img src="Photo/Photo_2.png" alt="Home office with laptop" class="w-full h-56 object-cover">
                 <div class="p-6">
                     <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
                         <span class="mr-2">ขั้นตอนที่ 2</span>
@@ -96,7 +96,7 @@
         </div>
 
             <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
-                <img src="/Photo/Photo_3.jpg" alt="Modern minimalist desk" class="w-full h-56 object-cover">
+                <img src="Photo/Photo_3.jpg" alt="Modern minimalist desk" class="w-full h-56 object-cover">
                 <div class="p-6">
                     <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
                         <span class="mr-2">ขั้นตอนที่ 3</span>
