--- a/main_manu.html
+++ b/main_manu.html
@@ -40,10 +40,10 @@
     <div class="bg-white p-8 rounded-3xl shadow-sm border border-gray-100 hover:shadow-md transition-all duration-300">
       <div class="mb-8">
         <h3 class="text-xl font-bold text-gray-900">การอบรมภายนอก</h3>
-        <p class="text-orange-500 text-sm mt-2">หน้าเพจรวบรวมคอร์สอบรมภายนอกของพนักงาน Eagles</p>
+        <p class="text-orange-500 text-sm mt-2">หน้าเพจคอร์สอบรมภายนอกของพนักงาน Eagles</p>
       </div>
       <div class="mb-8">
-        <span class="text-xl text-gray-400">รวบรวมการอบรมภายนอก</span>
+        <span class="text-l text-gray-400">การอบรมภายนอกของ Eagles Air & Sea Thailand CO.,LTD</span>
       </div>
       <a href="public_category.html" class="w-full py-3 px-4 round rounded-lg border bg-blue-600 text-white hover:bg-blue-700 focus:outline-hidden focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none transition">
         เข้าสู่ระบบ</a>
@@ -51,13 +51,13 @@
 
     <div class="bg-white p-8 rounded-3xl shadow-sm border border-gray-100 hover:shadow-md transition-all duration-300">
       <div class="mb-8">
-        <h3 class="text-xl font-bold text-gray-900">ความรู้ทั่วไป</h3>
-        <p class="text-orange-500 text-sm mt-2">หน้าเพจการรวบรวมความรู้ทั่วไป</p>
+        <h3 class="text-xl font-bold text-gray-900">การฝึกอบรมพนักงานใหม่</h3>
+        <p class="text-orange-500 text-sm mt-2">หน้าเพจฝึกอบรมพนักงานใหม่ของ Eagles Air & Sea Thailand CO.,LTD</p>
       </div>
       <div class="mb-8">
-        <span class="text-xl text-gray-400">หน้าเพจรวบรวมความรู้ทั่วไปที่พนักงาน Eagles ทุกคนควรรู้</span>
+        <span class="text-xl text-gray-400">การฝึกอบรมของพนักงานที่เข้ามาใหม่</span>
       </div>
-      <a href="knowledge_category.html" class="w-full py-3 px-4 round rounded-lg border bg-blue-600 text-white hover:bg-blue-700 focus:outline-hidden focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none transition">
+      <a href="newEm_category.html" class="w-full py-3 px-4 round rounded-lg border bg-blue-600 text-white hover:bg-blue-700 focus:outline-hidden focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none transition">
         เข้าสู่ระบบ</a>
     </div>
 
